# PARC-Engineers-League

./: .gitmodules  Dockerfile  README.md
parc_robot/: CMakeLists.txt  package.xml  setup.py
parc_robot/config/: goal_coordinates.yaml  gps_coordinates.yaml  peg_coordinates.yaml  pid_gains.yaml  task3_coordinates.yaml
parc_robot/include/parc_robot/: gps2cartesian.h
parc_robot/launch/: parc_task1.launch  parc_task2.launch  parc_task3.launch  task1.launch  task2.launch  task3.launch  teleop.launch  test.launch
parc_robot/materials/scripts/: dirty_metal.material
parc_robot/meshes/: enclosure_with_overhang.dae  seeder.stl  seeder_v1.stl
parc_robot/models/barn/: barn.sdf
parc_robot/models/barn_collision/: barn.sdf  model.config
parc_robot/models/carrot_plant/: carrot_plant.sdf  model.config
parc_robot/models/farmland/: farmland.sdf  model.config
parc_robot/models/goal_location/: model.sdf
parc_robot/msg/: RobotStatus.msg  Weed.msg  WeedDetection.msg
parc_robot/rviz/: parc_task2.rviz  task1.rviz  task2.rviz
parc_robot/scripts/: routes.py  task_2.py
parc_robot/src/: gps2cartesian.cpp  gps2cartesian.m  gps_to_cartesian.m  move.cpp
parc_robot/urdf/: attachment.xacro  enclosure.xacro  gps.xacro  robot.xacro  robot_gazebo.xacro  robot_with_seeder.xacro  rplidar.xacro  scout_wheel.gazebo  scout_wheel_type1.xacro  scout_wheel_type2.xacro  seeder.xacro  sensors.xacro  side_cameras.xacro  ydlidar.urdf  ydlidar.xacro  zed2.xacro
parc_robot/worlds/: generated.world  parc_task1.world  parc_task2.world  parc_task3.world  task1.world  test.world
(+41 files in other folders)
